/* Copyright 2019 Istio Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package stackdriver.common;

// NodeInfo represents the information extracted from proxy node metadata, or
// peer node metadata header This is used to fill metrics and log labels.
message NodeInfo {
  // Name of the node. e.g. in k8s, name is the pod name.
  string name = 1;

  // Namespaace that the node runs in.
  string namespace = 2;

  // K8s workload attributes.
  map<string, string> ports_to_containers = 3;
  string owner = 4;
  string workload_name = 5;

  // GCP project and k8s cluster metadata, used to fill in metric monitored
  // resource.
  message PlatformMetadata {
    string gcp_project = 1;
    string gcp_cluster_location = 2;
    string gcp_cluster_name = 3;
  }
  PlatformMetadata platform_metadata = 6;
}
