/* Copyright 2019 Istio Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package stackdriver.config;

message PluginConfig {
  // Indicates whether the module should act as inbound or outbound reporter.
  // Difference being:
  //   * inbound and outbound have different metric types to export.
  //   * inbound reporter writes access logs.
  enum ReporterKind {
    INBOUND = 0;
    OUTBOUND = 1;
  }
  ReporterKind kind = 1;

  // Controls whether to export access log.
  bool export_access_log = 2;

  // FQDN of destination service that the request routed to.
  string destination_service_name = 3;
}
